--- a/linux-sdr.conf
+++ b/linux-sdr.conf
@@ -1,23 +1,22 @@
 ## This has been tested on the following system:
-## Windows 11
-## AMD Radeon 6700 XT
-## HDR-compatible monitors connected via DisplayPort, in 10-bit mode
-## Windows HDR Color enabled
+## Arch Linux
+## GeForce RTX 2060 Mobile + Onboard AMD Video
 ##
-## The intent is to display all of SDR 8-bit, SDR 10-bit, and HDR 10-bit
-## correctly without downsampling.
+## The intent is to display all of SDR 8-bit as-is,
+## dither SDR 10-bit to avoid banding,
+## and tonemap HDR 10-bit in a high quality way.
 
 profile=gpu-hq
+tone-mapping=mobius
 
 # HW Accel Settings
-gpu-api=d3d11
-gpu-context=d3d11
+gpu-api=vulkan
 hwdec=auto-copy-safe
 hwdec-codecs=all
 target-trc=srgb
-target-prim=bt.2020
+target-prim=bt.709
 d3d11-output-csp=srgb
-dither-depth=10
+dither-depth=8
 
 # Window
 keep-open=yes
