--- a/linux-x2go.conf
+++ b/linux-x2go.conf
@@ -1,6 +1,6 @@
 ## This has been tested on the following system:
 ## Arch Linux
-## GeForce RTX 2060 Mobile + Onboard AMD Video
+## Connected via x2go
 ##
 ## The intent is to display all of SDR 8-bit as-is,
 ## dither SDR 10-bit to avoid banding,
@@ -10,9 +10,8 @@ profile=gpu-hq
 tone-mapping=mobius
 
 # HW Accel Settings
-gpu-api=vulkan
-hwdec=auto-copy-safe
-hwdec-codecs=all
+hwdec=no
+vo=x11
 target-trc=srgb
 target-prim=bt.709
 dither-depth=8
