Add audio filters

--- a/windows-hdr.mpv.conf
+++ b/windows-hdr.mpv.conf
@@ -29,6 +29,8 @@ cursor-autohide=100
 volume=100 
 volume-max=200
 audio-file-auto=fuzzy
+audio-channels=fl-fr-lfe
+af=dynaudnorm
 
 # Subtitles
 demuxer-mkv-subtitle-preroll=yes
