--- a/linux-sdr.conf
+++ b/linux-sdr.conf
@@ -27,6 +27,8 @@ cursor-autohide=100
 volume=100 
 volume-max=200
 audio-file-auto=fuzzy
+audio-channels=stereo
+af=dynaudnorm
 
 # Subtitles
 demuxer-mkv-subtitle-preroll=yes
