Fix colors on windows

--- a/windows-hdr.mpv.conf
+++ b/windows-hdr.mpv.conf
@@ -14,8 +14,8 @@ gpu-api=d3d11
 gpu-context=d3d11
 hwdec=auto-copy-safe
 hwdec-codecs=all
-target-trc=srgb
-target-prim=bt.2020
+target-trc=bt.709
+target-prim=bt.709
 d3d11-output-csp=srgb
 dither-depth=10
 
@@ -66,3 +66,10 @@ cscale=ewa_lanczossoft
 scale-antiring=0.7
 dscale-antiring=0.7
 cscale-antiring=0.7
+
+[HDR]
+profile-cond=p["video-params/gamma"]=="pq"
+target-trc=pg
+target-prim=bt.2020
+d3d11-output-csp=pq
+
