BT.709 is better

--- a/linux-sdr.conf
+++ b/linux-sdr.conf
@@ -13,7 +13,7 @@ tone-mapping=mobius
 gpu-api=vulkan
 hwdec=auto-copy-safe
 hwdec-codecs=all
-target-trc=srgb
+target-trc=bt.709
 target-prim=bt.709
 dither-depth=8
 
