--- a/linux-x2go.conf
+++ b/linux-x2go.conf
@@ -12,7 +12,7 @@ tone-mapping=mobius
 # HW Accel Settings
 hwdec=no
 vo=x11
-target-trc=srgb
+target-trc=bt.709
 target-prim=bt.709
 dither-depth=8
 
