--- a/windows-hdr.mpv.conf
+++ b/windows-hdr.mpv.conf
@@ -26,11 +26,11 @@ osd-bar=no
 cursor-autohide=100
 
 # Audio
-volume=100 
+volume=100
 volume-max=200
 audio-file-auto=fuzzy
 audio-channels=fl-fr-lfe
-af=dynaudnorm
+af=loudnorm
 
 # Subtitles
 demuxer-mkv-subtitle-preroll=yes
@@ -66,10 +66,3 @@ cscale=ewa_lanczossoft
 scale-antiring=0.7
 dscale-antiring=0.7
 cscale-antiring=0.7
-
-[HDR]
-profile-cond=p["video-params/gamma"]=="pq"
-target-trc=pg
-target-prim=bt.2020
-d3d11-output-csp=pq
-
