Updates for better displaying

--- a/windows-hdr.mpv.conf
+++ b/windows-hdr.mpv.conf
@@ -14,9 +14,28 @@ gpu-api=d3d11
 gpu-context=d3d11
 hwdec=auto-copy-safe
 hwdec-codecs=all
+
+# Display settings
+## 1.0 = dark room
+## 1.1 = moderate room lighting
+## 1.2 = bright room lighting
+gamma-factor=1.1
+## Generalization of Reinhard to a Möbius transform with linear section.
+## Smoothly maps out-of-range values while retaining contrast and colors
+## for in-range material as much as possible. Use this when you care about
+## color accuracy more than detail preservation
+tone-mapping=mobius
+## If your monitor is a true 10-bit monitor, you can use "bt.1886"
+## Otherwise, use "srgb"
 target-trc=bt.1886
-target-prim=bt.709
+## If your monitor is a true 10-bit monitor, you can use "dci-p3"
+## Otherwise, use "bt.709"
+target-prim=dci-p3
+## Only relevant on Windows.
+## Setting it to anything other than srgb breaks things, because Windows.
 d3d11-output-csp=srgb
+## Sometimes mpv fails at detecting the display bit-depth, so I prefer
+## to manually set this to either 10 or 8 depending on your monitor.
 dither-depth=10
 
 # Window
