--- a/windows-hdr.mpv.conf
+++ b/windows-hdr.mpv.conf
@@ -25,9 +25,7 @@ gamma-factor=1.1
 ## for in-range material as much as possible. Use this when you care about
 ## color accuracy more than detail preservation
 tone-mapping=mobius
-## If your monitor is a true 10-bit monitor, you can use "bt.1886"
-## Otherwise, use "srgb"
-target-trc=bt.1886
+target-trc=srgb
 ## If your monitor is a true 10-bit monitor, you can use "dci-p3"
 ## Otherwise, use "bt.709"
 target-prim=dci-p3
