Update linux files

--- a/linux-x2go.conf
+++ b/linux-x2go.conf
@@ -12,8 +12,23 @@ tone-mapping=mobius
 # HW Accel Settings
 hwdec=no
 vo=x11
-target-trc=bt.1886
+
+# Display settings
+## 1.0 = dark room
+## 1.1 = moderate room lighting
+## 1.2 = bright room lighting
+gamma-factor=1.1
+## Generalization of Reinhard to a Möbius transform with linear section.
+## Smoothly maps out-of-range values while retaining contrast and colors
+## for in-range material as much as possible. Use this when you care about
+## color accuracy more than detail preservation
+tone-mapping=mobius
+target-trc=srgb
+## If your monitor is a true 10-bit monitor, you can use "dci-p3"
+## Otherwise, use "bt.709"
 target-prim=bt.709
+## Sometimes mpv fails at detecting the display bit-depth, so I prefer
+## to manually set this to either 10 or 8 depending on your monitor.
 dither-depth=8
 
 # Window
@@ -26,6 +41,8 @@ cursor-autohide=100
 volume=100 
 volume-max=200
 audio-file-auto=fuzzy
+audio-channels=stereo
+af=loudnorm
 
 # Subtitles
 demuxer-mkv-subtitle-preroll=yes
