--- a/linux-sdr.conf
+++ b/linux-sdr.conf
@@ -6,8 +6,10 @@
 ## dither SDR 10-bit to avoid banding,
 ## and tonemap HDR 10-bit in a high quality way.
 
-# HW Accel Settings
 profile=gpu-hq
+
+# HW Accel Settings
+vo=gpu-next
 gpu-api=vulkan
 hwdec=auto-copy-safe
 hwdec-codecs=all
@@ -22,10 +24,7 @@ gamma-factor=1.1
 ## for in-range material as much as possible. Use this when you care about
 ## color accuracy more than detail preservation
 tone-mapping=mobius
-target-trc=srgb
-## If your monitor is a true 10-bit monitor, you can use "dci-p3"
-## Otherwise, use "bt.709"
-target-prim=bt.709
+target-colorspace-hint=yes
 ## Sometimes mpv fails at detecting the display bit-depth, so I prefer
 ## to manually set this to either 10 or 8 depending on your monitor.
 dither-depth=8
@@ -71,9 +70,13 @@ screenshot-template="%x/%f-%wH.%wM.%wS.%wT-F%{estimated-frame-number}-%03n"
 # Playback
 deband=no
 scaler-resizes-only=yes
-scale=ewa_lanczossharp
+correct-downscaling=yes
+linear-upscaling=yes
+sigmoid-upscaling=yes
+scale=ewa_lanczos
+scale-blur=0.981251
 dscale=ewa_lanczos
-cscale=ewa_lanczossoft
+cscale=ewa_lanczos
 scale-antiring=0.7
 dscale-antiring=0.7
 cscale-antiring=0.7
