--- a/linux-x2go.conf
+++ b/linux-x2go.conf
@@ -21,7 +21,7 @@ gamma-factor=1.1
 ## for in-range material as much as possible. Use this when you care about
 ## color accuracy more than detail preservation
 tone-mapping=mobius
-target-trc=srgb
+target-trc=bt.1886
 ## If your monitor is a true 10-bit monitor, you can use "dci-p3"
 ## Otherwise, use "bt.709"
 target-prim=bt.709
@@ -70,9 +70,13 @@ screenshot-template="%x/%f-%wH.%wM.%wS.%wT-F%{estimated-frame-number}-%03n"
 # Playback
 deband=no
 scaler-resizes-only=yes
-scale=ewa_lanczossharp
+correct-downscaling=yes
+linear-upscaling=yes
+sigmoid-upscaling=yes
+scale=ewa_lanczos
+scale-blur=0.981251
 dscale=ewa_lanczos
-cscale=ewa_lanczossoft
+cscale=ewa_lanczos
 scale-antiring=0.7
 dscale-antiring=0.7
 cscale-antiring=0.7
