--- a/windows-hdr.mpv.conf
+++ b/windows-hdr.mpv.conf
@@ -10,6 +10,7 @@
 profile=gpu-hq
 
 # HW Accel Settings
+vo=gpu-next
 gpu-api=d3d11
 gpu-context=d3d11
 hwdec=auto-copy-safe
@@ -25,10 +26,7 @@ gamma-factor=1.1
 ## for in-range material as much as possible. Use this when you care about
 ## color accuracy more than detail preservation
 tone-mapping=mobius
-target-trc=srgb
-## If your monitor is a true 10-bit monitor, you can use "dci-p3"
-## Otherwise, use "bt.709"
-target-prim=dci-p3
+target-colorspace-hint=yes
 ## Only relevant on Windows.
 ## Setting it to anything other than srgb breaks things, because Windows.
 d3d11-output-csp=srgb
@@ -77,9 +75,13 @@ screenshot-template="%x/%f-%wH.%wM.%wS.%wT-F%{estimated-frame-number}-%03n"
 # Playback
 deband=no
 scaler-resizes-only=yes
-scale=ewa_lanczossharp
+correct-downscaling=yes
+linear-upscaling=yes
+sigmoid-upscaling=yes
+scale=ewa_lanczos
+scale-blur=0.981251
 dscale=ewa_lanczos
-cscale=ewa_lanczossoft
+cscale=ewa_lanczos
 scale-antiring=0.7
 dscale-antiring=0.7
 cscale-antiring=0.7
