--- a/linux-sdr.conf
+++ b/linux-sdr.conf
@@ -6,10 +6,8 @@
 ## dither SDR 10-bit to avoid banding,
 ## and tonemap HDR 10-bit in a high quality way.
 
-profile=gpu-hq
-
 # HW Accel Settings
-vo=gpu-next
+profile=gpu-hq
 gpu-api=vulkan
 hwdec=auto-copy-safe
 hwdec-codecs=all
@@ -24,7 +22,7 @@ gamma-factor=1.1
 ## for in-range material as much as possible. Use this when you care about
 ## color accuracy more than detail preservation
 tone-mapping=mobius
-target-colorspace-hint=yes
+target-trc=bt.1886
 ## Sometimes mpv fails at detecting the display bit-depth, so I prefer
 ## to manually set this to either 10 or 8 depending on your monitor.
 dither-depth=8
