--- a/windows-hdr.mpv.conf
+++ b/windows-hdr.mpv.conf
@@ -11,9 +11,7 @@ profile=gpu-hq
 
 # HW Accel Settings
 vo=gpu-next
-gpu-api=d3d11
-gpu-context=d3d11
-hwdec=auto-copy-safe
+hwdec=auto-copy
 hwdec-codecs=all
 
 # Display settings
@@ -21,23 +19,20 @@ hwdec-codecs=all
 ## 1.1 = moderate room lighting
 ## 1.2 = bright room lighting
 gamma-factor=1.1
-## Generalization of Reinhard to a Möbius transform with linear section.
-## Smoothly maps out-of-range values while retaining contrast and colors
-## for in-range material as much as possible. Use this when you care about
-## color accuracy more than detail preservation
-tone-mapping=mobius
 target-colorspace-hint=yes
+target-prim=dci-p3
 ## Only relevant on Windows.
 ## Setting it to anything other than srgb breaks things, because Windows.
 d3d11-output-csp=srgb
+d3d11-output-format=rgb10_a2
 ## Sometimes mpv fails at detecting the display bit-depth, so I prefer
 ## to manually set this to either 10 or 8 depending on your monitor.
 dither-depth=10
 
 # Window
+fullscreen=yes
 keep-open=yes
-force-seekable=yes
-osd-bar=no
+autofit=50%
 cursor-autohide=100
 
 # Audio
@@ -69,19 +64,27 @@ blend-subtitles=no
 # Screenshots
 screenshot-format=png
 screenshot-high-bit-depth=yes
-screenshot-png-compression=1
+screenshot-png-compression=3
 screenshot-template="%x/%f-%wH.%wM.%wS.%wT-F%{estimated-frame-number}-%03n"
 
 # Playback
 deband=no
 scaler-resizes-only=yes
-correct-downscaling=yes
+
+glsl-shader="C:\Program Files\mpv\Shaders\nnedi3-nns256-win8x4.hook"
 linear-upscaling=yes
 sigmoid-upscaling=yes
 scale=ewa_lanczos
 scale-blur=0.981251
+
+glsl-shader="C:\Program Files\mpv\Shaders\SSimDownscaler.glsl"
+correct-downscaling=yes
+linear-downscaling=no
 dscale=ewa_lanczos
-cscale=ewa_lanczos
+
+# glsl-shader="C:\Program Files\mpv\Shaders\KrigBilateral.glsl"
+# cscale=spline36
+
 scale-antiring=0.7
 dscale-antiring=0.7
 cscale-antiring=0.7
