Never mind fuck that shit

--- a/windows-hdr.mpv.conf
+++ b/windows-hdr.mpv.conf
@@ -71,19 +71,10 @@ screenshot-template="%x/%f-%wH.%wM.%wS.%wT-F%{estimated-frame-number}-%03n"
 deband=no
 scaler-resizes-only=yes
 
-glsl-shader="C:\Program Files\mpv\Shaders\nnedi3-nns256-win8x4.hook"
-linear-upscaling=yes
-sigmoid-upscaling=yes
 scale=ewa_lanczos
 scale-blur=0.981251
-
-glsl-shader="C:\Program Files\mpv\Shaders\SSimDownscaler.glsl"
-correct-downscaling=yes
-linear-downscaling=no
 dscale=ewa_lanczos
-
-# glsl-shader="C:\Program Files\mpv\Shaders\KrigBilateral.glsl"
-# cscale=spline36
+cscale=spline36
 
 scale-antiring=0.7
 dscale-antiring=0.7
