--- a/linux-sdr.conf
+++ b/linux-sdr.conf
@@ -6,8 +6,9 @@
 ## dither SDR 10-bit to avoid banding,
 ## and tonemap HDR 10-bit in a high quality way.
 
-# HW Accel Settings
 profile=gpu-hq
+
+# HW Accel Settings
 gpu-api=vulkan
 hwdec=auto-copy-safe
 hwdec-codecs=all
@@ -68,13 +69,12 @@ screenshot-template="%x/%f-%wH.%wM.%wS.%wT-F%{estimated-frame-number}-%03n"
 # Playback
 deband=no
 scaler-resizes-only=yes
-correct-downscaling=yes
-linear-upscaling=yes
-sigmoid-upscaling=yes
+
 scale=ewa_lanczos
 scale-blur=0.981251
 dscale=ewa_lanczos
-cscale=ewa_lanczos
+cscale=spline36
+
 scale-antiring=0.7
 dscale-antiring=0.7
 cscale-antiring=0.7
