Fix HDR on x2go

--- a/linux-x2go.conf
+++ b/linux-x2go.conf
@@ -80,3 +80,7 @@ cscale=spline36
 scale-antiring=0.7
 dscale-antiring=0.7
 cscale-antiring=0.7
+
+[hdr]
+profile-cond=p["video-params/gamma"]=="pq"
+vf=lavfi="zscale=transfer=linear,format=gbrpf32le,tonemap=mobius,zscale=transfer=bt709,format=yuv420p"
