--- a/windows-hdr.mpv.conf
+++ b/windows-hdr.mpv.conf
@@ -11,7 +11,7 @@ profile=gpu-hq
 
 # HW Accel Settings
 vo=gpu-next
-hwdec=auto-copy
+hwdec=auto-copy-safe
 hwdec-codecs=all
 
 # Display settings
@@ -24,7 +24,6 @@ target-prim=dci-p3
 ## Only relevant on Windows.
 ## Setting it to anything other than srgb breaks things, because Windows.
 d3d11-output-csp=srgb
-d3d11-output-format=rgb10_a2
 ## Sometimes mpv fails at detecting the display bit-depth, so I prefer
 ## to manually set this to either 10 or 8 depending on your monitor.
 dither-depth=10
@@ -34,6 +33,7 @@ fullscreen=yes
 keep-open=yes
 autofit=50%
 cursor-autohide=100
+osc=no
 
 # Audio
 volume=100
