Fix hdr thumbnails

--- a/windows-hdr.mpv.conf
+++ b/windows-hdr.mpv.conf
@@ -79,3 +79,11 @@ cscale=spline36
 scale-antiring=0.7
 dscale-antiring=0.7
 cscale-antiring=0.7
+
+[hdr-thumbnail]
+profile-cond=p["video-params/gamma"]=="pq" and p["current-vo"]=="lavc"
+target-trc=bt.1886
+target-prim=bt.709
+vf=lavfi="zscale=transfer=linear,format=gbrpf32le,tonemap=mobius,format=bgra"
+vf-add="scale=200:-1"
+vf-add="format=bgra"
