--- a/windows-hdr.mpv.conf
+++ b/windows-hdr.mpv.conf
@@ -20,18 +20,18 @@ hwdec-codecs=all
 ## 1.2 = bright room lighting
 gamma-factor=1.1
 target-colorspace-hint=yes
-target-prim=dci-p3
+target-trc=bt.1886
 ## Only relevant on Windows.
 ## Setting it to anything other than srgb breaks things, because Windows.
 d3d11-output-csp=srgb
 ## Sometimes mpv fails at detecting the display bit-depth, so I prefer
 ## to manually set this to either 10 or 8 depending on your monitor.
 dither-depth=10
+tone-mapping=bt.2446a
 
 # Window
-fullscreen=yes
 keep-open=yes
-autofit=50%
+# autofit=50%
 cursor-autohide=100
 osc=no
 
@@ -80,10 +80,7 @@ scale-antiring=0.7
 dscale-antiring=0.7
 cscale-antiring=0.7
 
-[hdr-thumbnail]
-profile-cond=p["video-params/gamma"]=="pq" and p["current-vo"]=="lavc"
-target-trc=bt.1886
-target-prim=bt.709
-vf=lavfi="zscale=transfer=linear,format=gbrpf32le,tonemap=mobius,format=bgra"
-vf-add="scale=200:-1"
-vf-add="format=bgra"
+[web-shit]
+profile-desc=Lol Youtube Quality
+profile-cond=p["path"]:find("://") ~= nil
+deband=yes
