--- a/linux-sdr.conf
+++ b/linux-sdr.conf
@@ -18,12 +18,9 @@ hwdec-codecs=all
 ## 1.1 = moderate room lighting
 ## 1.2 = bright room lighting
 gamma-factor=1.1
-## Generalization of Reinhard to a Möbius transform with linear section.
-## Smoothly maps out-of-range values while retaining contrast and colors
-## for in-range material as much as possible. Use this when you care about
-## color accuracy more than detail preservation
-tone-mapping=mobius
+tone-mapping=bt.2390
 target-trc=bt.1886
+target-prim=bt.709
 ## Sometimes mpv fails at detecting the display bit-depth, so I prefer
 ## to manually set this to either 10 or 8 depending on your monitor.
 dither-depth=8
