--- a/script-opts/mpv_thumbnail_script.conf
+++ b/script-opts/mpv_thumbnail_script.conf
@@ -1,6 +1,6 @@
 # Whether to generate thumbnails automatically on video load, without a keypress
 # Defaults to yes
-autogenerate=yes
+autogenerate=no
 
 # Only automatically thumbnail videos shorter than this (in seconds)
 # You will have to press T (or your own keybind) to enable the thumbnail previews
@@ -19,9 +19,6 @@ prefer_mpv=yes
 # If this is not what you wish, set mpv_no_sub to yes
 # Defaults to no
 mpv_no_sub=yes
-
-# This will make HDR thumbnails appear correct and not bright as fuck
-mpv_profile = "thumbnail"
 
 # Enable to disable the built-in keybind ("T") to add your own, see after the block
 disable_keybinds=no
@@ -50,9 +47,9 @@ max_delta=30
 # Defaults to no
 thumbnail_network=yes
 # Override thumbnail count, min/max delta, as above
-remote_thumbnail_count=80
-remote_min_delta=8
-remote_max_delta=60
+remote_thumbnail_count=75
+remote_min_delta=10
+remote_max_delta=90
 
 # Try to grab the raw stream and disable ytdl for the mpv subcalls
 # Much faster than passing the url to ytdl again, but may cause problems with some sites
