--- a/windows-hdr.mpv.conf
+++ b/windows-hdr.mpv.conf
@@ -11,6 +11,7 @@ profile=gpu-hq
 
 # HW Accel Settings
 vo=gpu-next
+gpu-api=vulkan
 hwdec=auto-copy-safe
 hwdec-codecs=all
 
@@ -20,18 +21,17 @@ hwdec-codecs=all
 ## 1.2 = bright room lighting
 gamma-factor=1.1
 target-colorspace-hint=yes
+target-prim=bt.709
 target-trc=bt.1886
-## Only relevant on Windows.
-## Setting it to anything other than srgb breaks things, because Windows.
-d3d11-output-csp=srgb
-## Sometimes mpv fails at detecting the display bit-depth, so I prefer
-## to manually set this to either 10 or 8 depending on your monitor.
 dither-depth=10
-tone-mapping=bt.2446a
+dither=error-diffusion
+error-diffusion=floyd-steinberg
+icc-intent=0
 
 # Window
 keep-open=yes
-# autofit=50%
+fullscreen=yes
+autofit=50%
 cursor-autohide=100
 osc=no
 
@@ -45,7 +45,7 @@ af=loudnorm
 # Subtitles
 demuxer-mkv-subtitle-preroll=yes
 sub-ass-vsfilter-blur-compat=no
-sub-fix-timing=yes
+sub-fix-timing=no
 sub-auto=fuzzy
 sub-gauss=1.0
 sub-gray=yes
@@ -59,7 +59,7 @@ sub-margin-x=100
 sub-margin-y=50
 sub-shadow-color=0.0/0.0/0.0/0.25
 sub-shadow-offset=0
-blend-subtitles=no
+blend-subtitles=yes
 
 # Screenshots
 screenshot-format=png
@@ -84,3 +84,9 @@ cscale-antiring=0.7
 profile-desc=Lol Youtube Quality
 profile-cond=p["path"]:find("://") ~= nil
 deband=yes
+
+[auto-hdr]
+profile-desc=HDR Content
+profile-cond=p["video-params/gamma"] == "pq"
+target-prim=dci-p3
+target-trc=pq
