--- a/linux-x2go.conf
+++ b/linux-x2go.conf
@@ -6,9 +6,8 @@
 ## dither SDR 10-bit to avoid banding,
 ## and tonemap HDR 10-bit in a high quality way.
 
-profile=gpu-hq
-
 # HW Accel Settings
+#profile=gpu-hq
 hwdec=no
 vo=x11
 
@@ -17,8 +16,14 @@ vo=x11
 ## 1.1 = moderate room lighting
 ## 1.2 = bright room lighting
 gamma-factor=1.1
+## Generalization of Reinhard to a Möbius transform with linear section.
+## Smoothly maps out-of-range values while retaining contrast and colors
+## for in-range material as much as possible. Use this when you care about
+## color accuracy more than detail preservation
 tone-mapping=bt.2390
 target-trc=bt.1886
+## If your monitor is a true 10-bit monitor, you can use "dci-p3"
+## Otherwise, use "bt.709"
 target-prim=bt.709
 ## Sometimes mpv fails at detecting the display bit-depth, so I prefer
 ## to manually set this to either 10 or 8 depending on your monitor.
@@ -65,16 +70,23 @@ screenshot-template="%x/%f-%wH.%wM.%wS.%wT-F%{estimated-frame-number}-%03n"
 # Playback
 deband=no
 scaler-resizes-only=yes
-
+correct-downscaling=yes
+linear-upscaling=yes
+sigmoid-upscaling=yes
 scale=ewa_lanczos
 scale-blur=0.981251
 dscale=ewa_lanczos
-cscale=spline36
-
+cscale=ewa_lanczos
 scale-antiring=0.7
 dscale-antiring=0.7
 cscale-antiring=0.7
 
+sws-allow-zimg=yes
+sws-scaler=spline
+zimg-scaler=spline36
+zimg-scaler-chroma=bicubic
+
 [hdr]
 profile-cond=p["video-params/gamma"]=="pq"
-vf=lavfi="zscale=transfer=linear,format=gbrpf32le,tonemap=mobius,zscale=transfer=bt709,format=yuv420p"
+vf=lavfi="zscale=transfer=linear,tonemap=reinhard,zscale=transfer=bt709,format=yuv420p"
+
