--- a/linux-sdr.conf
+++ b/linux-sdr.conf
@@ -9,6 +9,7 @@
 profile=gpu-hq
 
 # HW Accel Settings
+vo=gpu-next
 gpu-api=vulkan
 hwdec=auto-copy-safe
 hwdec-codecs=all
@@ -18,21 +19,25 @@ hwdec-codecs=all
 ## 1.1 = moderate room lighting
 ## 1.2 = bright room lighting
 gamma-factor=1.1
-tone-mapping=bt.2390
-target-trc=bt.1886
+icc-intent=0
+target-colorspace-hint=yes
 target-prim=bt.709
-## Sometimes mpv fails at detecting the display bit-depth, so I prefer
-## to manually set this to either 10 or 8 depending on your monitor.
+target-trc=bt.1886
 dither-depth=8
+tone-mapping=bt.2446a
+tone-mapping-mode=luma
+gamut-mapping-mode=clip
+hdr-compute-peak=no
 
 # Window
 keep-open=yes
-force-seekable=yes
-osd-bar=no
+# fullscreen=yes
+# autofit=50%
 cursor-autohide=100
+osc=no
 
 # Audio
-volume=100 
+volume=100
 volume-max=200
 audio-file-auto=fuzzy
 audio-channels=stereo
@@ -41,7 +46,7 @@ af=loudnorm
 # Subtitles
 demuxer-mkv-subtitle-preroll=yes
 sub-ass-vsfilter-blur-compat=no
-sub-fix-timing=yes
+sub-fix-timing=no
 sub-auto=fuzzy
 sub-gauss=1.0
 sub-gray=yes
@@ -55,7 +60,7 @@ sub-margin-x=100
 sub-margin-y=50
 sub-shadow-color=0.0/0.0/0.0/0.25
 sub-shadow-offset=0
-blend-subtitles=no
+blend-subtitles=yes
 
 # Screenshots
 screenshot-format=png
@@ -75,3 +80,8 @@ cscale=spline36
 scale-antiring=0.7
 dscale-antiring=0.7
 cscale-antiring=0.7
+
+[web-shit]
+profile-desc=Lol Youtube Quality
+profile-cond=p["path"]:find("://") ~= nil
+deband=yes
