--- a/windows-hdr.mpv.conf
+++ b/windows-hdr.mpv.conf
@@ -11,7 +11,8 @@ profile=gpu-hq
 
 # HW Accel Settings
 vo=gpu-next
-gpu-api=vulkan
+gpu-api=d3d11
+d3d11-output-csp=srgb
 hwdec=auto-copy-safe
 hwdec-codecs=all
 
@@ -20,18 +21,20 @@ hwdec-codecs=all
 ## 1.1 = moderate room lighting
 ## 1.2 = bright room lighting
 gamma-factor=1.1
+icc-intent=0
 target-colorspace-hint=yes
 target-prim=bt.709
 target-trc=bt.1886
 dither-depth=10
-dither=error-diffusion
-error-diffusion=floyd-steinberg
-icc-intent=0
+tone-mapping=bt.2446a
+tone-mapping-mode=luma
+gamut-mapping-mode=clip
+hdr-compute-peak=no
 
 # Window
 keep-open=yes
-fullscreen=yes
-autofit=50%
+# fullscreen=yes
+# autofit=50%
 cursor-autohide=100
 osc=no
 
@@ -84,9 +87,3 @@ cscale-antiring=0.7
 profile-desc=Lol Youtube Quality
 profile-cond=p["path"]:find("://") ~= nil
 deband=yes
-
-[auto-hdr]
-profile-desc=HDR Content
-profile-cond=p["video-params/gamma"] == "pq"
-target-prim=dci-p3
-target-trc=pq
