--- a/windows-hdr.mpv.conf
+++ b/windows-hdr.mpv.conf
@@ -20,13 +20,14 @@ hwdec-codecs=all
 ## 1.0 = dark room
 ## 1.1 = moderate room lighting
 ## 1.2 = bright room lighting
-gamma-factor=1.1
+# gamma-factor=1.1
+# target-colorspace-hint=yes
 icc-intent=0
-target-colorspace-hint=yes
-target-prim=bt.709
+target-prim=dci-p3
 target-trc=bt.1886
+icc-profile-auto=yes
 dither-depth=10
-tone-mapping=bt.2446a
+tone-mapping=bt.2390
 tone-mapping-mode=luma
 gamut-mapping-mode=clip
 hdr-compute-peak=no
@@ -42,7 +43,6 @@ osc=no
 volume=100
 volume-max=200
 audio-file-auto=fuzzy
-audio-channels=fl-fr-lfe
 af=loudnorm
 
 # Subtitles
@@ -87,3 +87,5 @@ cscale-antiring=0.7
 profile-desc=Lol Youtube Quality
 profile-cond=p["path"]:find("://") ~= nil
 deband=yes
+screenshot-directory="C:\Users\jholm\Downloads"
+screenshot-template="%f-%wH.%wM.%wS.%wT-F%{estimated-frame-number}-%03n"
