--- a/linux-sdr.conf
+++ b/linux-sdr.conf
@@ -20,11 +20,10 @@ hwdec-codecs=all
 ## 1.2 = bright room lighting
 gamma-factor=1.1
 icc-intent=0
-target-colorspace-hint=yes
 target-prim=bt.709
 target-trc=bt.1886
 dither-depth=8
-tone-mapping=bt.2446a
+tone-mapping=bt.2390
 tone-mapping-mode=luma
 gamut-mapping-mode=clip
 hdr-compute-peak=no
