I hate windows and hdr

--- a/windows-hdr.mpv.conf
+++ b/windows-hdr.mpv.conf
@@ -12,7 +12,8 @@ profile=gpu-hq
 # HW Accel Settings
 vo=gpu-next
 gpu-api=d3d11
-d3d11-output-csp=srgb
+d3d11-output-format=rgb10_a2
+d3d11-output-csp=auto
 hwdec=auto-copy-safe
 hwdec-codecs=all
 
@@ -20,21 +21,22 @@ hwdec-codecs=all
 ## 1.0 = dark room
 ## 1.1 = moderate room lighting
 ## 1.2 = bright room lighting
-# gamma-factor=1.1
+gamma-factor=1.1
 # target-colorspace-hint=yes
 icc-intent=0
+icc-profile-auto=yes
 target-prim=dci-p3
 target-trc=bt.1886
-icc-profile-auto=yes
 dither-depth=10
 tone-mapping=bt.2390
 tone-mapping-mode=luma
 gamut-mapping-mode=clip
 hdr-compute-peak=no
+inverse-tone-mapping=yes
 
 # Window
 keep-open=yes
-# fullscreen=yes
+fullscreen=yes
 # autofit=50%
 cursor-autohide=100
 osc=no
@@ -82,6 +84,8 @@ cscale=spline36
 scale-antiring=0.7
 dscale-antiring=0.7
 cscale-antiring=0.7
+
+ytdl-format=ytdl
 
 [web-shit]
 profile-desc=Lol Youtube Quality
