--- a/example.mpv.conf
+++ b/example.mpv.conf
@@ -5,7 +5,7 @@
 ## Monitors calibrated with DisplayCal
 ## Windows HDR Color disabled
 ##
-## Should also work on Windows with some minor tweaks,
+## Should also work on Linux with some minor tweaks,
 ## noted in comments below
 ##
 ## Windows HDR has a bad tone-mapping effect on SDR content
