--- a/example.mpv.conf
+++ b/example.mpv.conf
@@ -1,12 +1,11 @@
-## As of 2024-09-16
+## As of 2025-01-16
 ## This has been tested on the following system:
 ## Windows 11
 ## Geforce RTX 4080 SUPER
 ## Monitors calibrated with DisplayCal
 ## Windows HDR Color disabled
 ##
-## Should also work on Linux with some minor tweaks,
-## noted in comments below
+## Should also work on Linux
 ##
 ## Windows HDR has a bad tone-mapping effect on SDR content
 ## which results in heavy banding and blocking,
@@ -19,22 +18,12 @@ vo=gpu-next
 hwdec=auto-copy-safe
 hwdec-codecs=all
 
-# Display settings
-# target-colorspace-hint=yes
-icc-intent=0
-icc-profile-auto=yes
-# On Linux you may need to specify the path, `icc-profile-auto` doesn't seem to work on Plasma. Not tested on Gnome.
-#icc-profile="/home/soichiro/.local/share/DisplayCAL/storage/Monitor 1 #1 2024-07-11 21-22 203cdm² 0.3127x 0.329y Rec. 1886 M-S XYZLUT+MTX/Monitor 1 #1 2024-07-11 21-22 203cdm² 0.3127x 0.329y Rec. 1886 M-S XYZLUT+MTX.icc"
-# Target prim and trc are pulled from the ICC profile,
-# you don't need to specify them manually if you
-# have an ICC profile active.
-#target-prim=dci-p3
-#target-trc=bt.1886
+target-prim=bt.709
+target-trc=bt.1886
 dither-depth=auto
 tone-mapping=bt.2446a
 gamut-mapping-mode=relative
 hdr-compute-peak=no
-hdr-contrast-recovery=0.5
 
 # Window
 keep-open=yes
@@ -70,15 +59,16 @@ blend-subtitles=yes
 screenshot-format=png
 screenshot-high-bit-depth=yes
 screenshot-png-compression=3
-screenshot-directory="C:\Users\soichiro\Downloads"
+#screenshot-directory="C:\Users\me\Downloads" # set this to wherever you want, default writes to the directory from which mpv was started
 screenshot-template="%f-%wH.%wM.%wS.%wT-F%{estimated-frame-number}-%03n"
 
 # Playback
-deband=no
+deband=no # turn off by default, toggle with 'b' hotkey
 scaler-resizes-only=yes
+osc=no
 
 scale=ewa_lanczossharp
-dscale=catmull_rom
+dscale=hermite
 cscale=spline36
 linear-downscaling=yes
 
