--- a/example.mpv.conf
+++ b/example.mpv.conf
@@ -73,3 +73,11 @@ cscale=spline36
 linear-downscaling=yes
 
 ytdl-format=ytdl
+
+# I have 2-pass loudnorm run on all of my archived music files,
+# so I don't want mpv doing it a second time with 1-pass.
+# Comment or remove this section if you don't want this behavior.
+[music]
+profile-desc=Disable loudnorm for music
+profile-cond=get('filename', ''):match('%.opus$') ~= nil
+af=""
