--- a/example.mpv.conf
+++ b/example.mpv.conf
@@ -1,4 +1,4 @@
-## As of 2025-01-16
+## As of 2025-02-05
 ## This has been tested on the following system:
 ## Windows 11
 ## Geforce RTX 4080 SUPER
@@ -17,6 +17,11 @@ profile=gpu-hq
 vo=gpu-next
 hwdec=auto-copy-safe
 hwdec-codecs=all
+
+cache=yes
+demuxer-max-bytes=512MiB
+demuxer-readahead-secs=10
+video-sync=display-resample
 
 target-prim=bt.709
 target-trc=bt.1886
@@ -59,7 +64,7 @@ blend-subtitles=yes
 screenshot-format=png
 screenshot-high-bit-depth=yes
 screenshot-png-compression=3
-#screenshot-directory="C:\Users\me\Downloads" # set this to wherever you want, default writes to the directory from which mpv was started
+screenshot-directory="C:\Users\jholm\Downloads"
 screenshot-template="%f-%wH.%wM.%wS.%wT-F%{estimated-frame-number}-%03n"
 
 # Playback
@@ -76,7 +81,6 @@ ytdl-format=ytdl
 
 # I have 2-pass loudnorm run on all of my archived music files,
 # so I don't want mpv doing it a second time with 1-pass.
-# Comment or remove this section if you don't want this behavior.
 [music]
 profile-desc=Disable loudnorm for music
 profile-cond=get('filename', ''):match('%.opus$') ~= nil
