--- a/example.mpv.conf
+++ b/example.mpv.conf
@@ -64,7 +64,7 @@ blend-subtitles=yes
 screenshot-format=png
 screenshot-high-bit-depth=yes
 screenshot-png-compression=3
-screenshot-directory="C:\Users\jholm\Downloads"
+screenshot-directory="C:\Users\me\Downloads"
 screenshot-template="%f-%wH.%wM.%wS.%wT-F%{estimated-frame-number}-%03n"
 
 # Playback
