--- a/example.mpv.conf
+++ b/example.mpv.conf
@@ -18,11 +18,6 @@ vo=gpu-next
 hwdec=auto-copy-safe
 hwdec-codecs=all
 
-cache=yes
-demuxer-max-bytes=512MiB
-demuxer-readahead-secs=10
-video-sync=display-resample
-
 target-prim=bt.709
 target-trc=bt.1886
 dither-depth=auto
@@ -38,7 +33,7 @@ cursor-autohide=100
 volume=100
 volume-max=200
 audio-file-auto=fuzzy
-af=lavfi=[loudnorm=I=-16:TP=-1.5:LRA=11:dual_mono=true]
+af=loudnorm
 
 # Subtitles
 # This sets default styles for SRT subtitles
