Bring back custom loudnorm, the default is too quiet

--- a/example.mpv.conf
+++ b/example.mpv.conf
@@ -33,7 +33,7 @@ cursor-autohide=100
 volume=100
 volume-max=200
 audio-file-auto=fuzzy
-af=loudnorm
+af=lavfi=[loudnorm=I=-16:TP=-1.5:LRA=11:dual_mono=true]
 
 # Subtitles
 # This sets default styles for SRT subtitles
