Maybe the cache was helping? At least it wasn't hurting anything

--- a/example.mpv.conf
+++ b/example.mpv.conf
@@ -18,6 +18,10 @@ vo=gpu-next
 hwdec=auto-copy-safe
 hwdec-codecs=all
 
+cache=yes
+demuxer-max-bytes=512MiB
+demuxer-readahead-secs=10
+
 target-prim=bt.709
 target-trc=bt.1886
 dither-depth=auto
